# cc

./: .gitignore  LICENSE  README.md  cc.cabal  hie.yml  hs-cc.cabal
data/: 1.c
exe/: Main.hs
src/: Compiler.hs  Lexer.hs  Parser.hs
src/Lexer/: Token.hs
