cabal-version: >= 2.0
name:   cc
version: 1.0
license: MIT
build-type: Simple

library
    exposed-modules: Compiler
    hs-source-dirs: src
    build-depends: base, containers
    default-language: Haskell2010

executable cc
    main-is: Main.hs
    hs-source-dirs: exe
    build-depends: base, cc
    default-language: Haskell2010
