cabal-version: >= 2.0
name:   hs-cc
version: 1.0
license: MIT
build-type: Simple

library
    exposed-modules: Compiler
    hs-source-dirs: src
    build-depends: base
    default-language: Haskell2010

executable hs-cc
    main-is: Main.hs
    hs-source-dirs: exe
    build-depends: base, hs-cc
    default-language: Haskell2010
